Notable changes from previous release:

In development:
	* Support libeemd 1.5
	* Location of libeemd.so can be set by environment variable
	  LIBEEMD_FILE
	* Add function for querying the libeemd version from the library file

Version 1.4:
	* Split pyeemd to a separate project
	* Python 3 support
	* Use find_library from ctypes to find libeemd
	* Switch to setuptools

For older changes, please see ChangeLog of libeemd.