@@ -5,6 +5,7 @@ In development:
 	* Location of libeemd.so can be set by environment variable
 	  LIBEEMD_FILE
 	* Add function for querying the libeemd version from the library file
+	* More informative handling of libeemd errors
 
 Version 1.4:
 	* Split pyeemd to a separate project
